--- a/about.html
+++ b/about.html
@@ -110,10 +110,7 @@
           <h1 class="pb-1">Meet the Owner</h1>
           <p class="text-left">Joshua Johnson is an Orlando native who 
             truly believes in creating opportunities for others. 
-            At a cousin’s birthday party, he ate some delicious 
-            Caribbean soul food that was prepared by the woman who would 
-            go on to be the first chef at Seana’s. The food was so delicious 
-            that he felt others should have an opportunity to eat the authentic, 
+            He felt others should have an opportunity to eat the authentic, 
             cooked-to-order Caribbean soul food. Orlando is dominated by fast 
             food so he knew the city needed a place like Seana's. Josh was 
             determined to spread this flavorful offering to his local community 
