--- a/index.html
+++ b/index.html
@@ -29,20 +29,27 @@
                 </div>
               </div>
               <div class="modal-body">
-                <div class="row d-flex justify-content-center">
-                  <div class="col-6 text-center">
-                    <a href="./main_menu.pdf#view=FitH">
-                      <h4 class="py-3 menu-title">Daily Menu</h4>
-                      <img src="./resources/css/main_menu.jpg" class="w-100 shadow zoom" alt="" title="Daily Menu">
-                      <button type="submit" class="btn my-4 ">View Menu</button> 
-                    </a>
+                <div class="row d-flex justify-content-center my-3">
+                  <div class="col-8 col-md-6 text-center">
+                      <img src="./resources/css/logo.png" class="w-100 shadow" alt="" title="Welcome to Seana's!">
                   </div>
-                  <div class="col-6 text-center">
-                    <a href="./lunch_menu.pdf#view=FitH">
-                      <h4 class="py-3 menu-title">Lunch Menu</h4>
-                      <img src="./resources/css/lunch_menu.jpg" class="w-100 shadow zoom" alt="" title="Lunch Menu">
-                      <button type="submit" class="btn my-4 ">View Menu</button> 
-                    </a>
+                  <div class="col-12">
+                    <div class="row">
+                      <div class="col-6 text-center my-3">
+                        <a href="./main_menu.pdf#view=FitH">
+                          <h4 class="py-3 menu-title">Daily Menu</h4>
+                          <img src="./resources/css/menu 1.jpg" class="hide w-100 shadow" alt="" title="Daily Menu">
+                          <button type="submit" class="btn ">View Menu</button> 
+                        </a>
+                      </div>
+                      <div class="col-6 text-center my-3">
+                        <a href="./lunch_menu.pdf#view=FitH">
+                          <h4 class="py-3 menu-title">Lunch Menu</h4>
+                          <img src="./resources/css/menu 2.png" class="hide w-100 shadow" alt="" title="Lunch Menu">
+                          <button type="submit" class="btn ">View Menu</button> 
+                        </a>
+                      </div>
+                    </div>
                   </div>
                   <div class="row">
                     <div class="col-12">
@@ -70,7 +77,7 @@
               </div>
           </div>
       </div>
-  </div>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <a class="navbar-brand" href="./index.html">
         <img src="./resources/css/logo.png" id="logo">
@@ -144,19 +151,10 @@
               <img class="d-block w-100" src="./resources/css/carousel-2.jpg" alt="Second slide">
             </div>
             <div class="carousel-item embed-responsive-item">
-              <img class="d-block w-100" src="./resources/css/carousel-3.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item embed-responsive-item">
               <img class="d-block w-100" src="./resources/css/carousel-4.jpg" alt="Third slide">
             </div>
             <div class="carousel-item embed-responsive-item">
               <img class="d-block w-100" src="./resources/css/carousel-5.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item embed-responsive-item">
-              <img class="d-block w-100" src="./resources/css/carousel-6.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item embed-responsive-item">
-              <img class="d-block w-100" src="./resources/css/carousel-7.jpg" alt="Third slide">
             </div>
             <div class="carousel-item embed-responsive-item">
               <img class="d-block w-100" src="./resources/css/carousel-8.jpg" alt="Third slide">
@@ -167,22 +165,13 @@
           </div>
         </div>
 
-          <div id="carouselExampleSlidesOnly" data-interval="3700" class="carousel slide mb-3 mobile" data-ride="carousel">
+          <div id="carouselExampleSlidesOnly" data-interval="4000" class="carousel slide mb-3 mobile" data-ride="carousel">
             <div class="carousel-inner embed-responsive embed-responsive-1by1 banner">
               <div class="carousel-item embed-responsive-item active">
                 <img class="d-block w-100" src="./resources/css/carousel-1-mobile.jpg" alt="First slide">
               </div>
               <div class="carousel-item embed-responsive-item">
-                <img class="d-block w-100" src="./resources/css/carousel-7-mobile.jpg" alt="Second slide">
-              </div>
-              <div class="carousel-item embed-responsive-item">
-                <img class="d-block w-100" src="./resources/css/carousel-8-mobile.jpg" alt="Third slide">
-              </div>
-              <div class="carousel-item embed-responsive-item">
-                <img class="d-block w-100" src="./resources/css/carousel-4-mobile.jpg" alt="Third slide">
-              </div>
-              <div class="carousel-item embed-responsive-item">
-                <img class="d-block w-100" src="./resources/css/carousel-9-mobile.jpg" alt="Third slide">
+                <img class="d-block w-100" src="./resources/css/carousel-4-mobile.jpg" alt="Second slide">
               </div>
               <div class="carousel-item embed-responsive-item">
                 <img class="d-block w-100" src="./resources/css/carousel-6-mobile.jpg" alt="Third slide">
@@ -210,18 +199,18 @@
       </div>
 
       <div class="row d-flex justify-content-center my-3">
-        <div class="col-12 col-md-8 col-lg-5 my-3">
+        <div class="col-6 col-lg-5 my-3">
           <a href="./main_menu.pdf#view=FitH">
             <h3 class="py-3 menu-title">Daily Menu</h3>
-            <img src="./resources/css/main_menu.jpg" class="w-100 shadow zoom" alt="" title="Daily Menu">
+            <img src="./resources/css/main_menu.jpg" class="hide w-100 shadow" alt="" title="Daily Menu">
             <button type="submit" class="btn my-4">View Menu</button> 
           </a>
           
         </div>
-        <div class="col-12 col-md-8 col-lg-5 my-3">
+        <div class="col-6 col-lg-5 my-3">
           <a href="./lunch_menu.pdf#view=FitH">
             <h3 class="py-3 menu-title">Lunch Menu</h3>
-            <img src="./resources/css/lunch_menu.jpg" class="w-100 shadow zoom" alt="" title="Lunch Menu">
+            <img src="./resources/css/lunch_menu.jpg" class="hide w-100 shadow" alt="" title="Lunch Menu">
             <button type="submit" class="btn my-4">View Menu</button> 
           </a>
         </div>
