--- a/about.html
+++ b/about.html
@@ -112,10 +112,10 @@
           <p class="text-left">Joshua Johnson is an Orlando native who 
             truly believes in creating opportunities for others. 
             He felt others should have an opportunity to eat the authentic, 
-            cooked-to-order Caribbean soul food. Orlando is dominated by fast 
-            food so he knew the city needed a place like Seana's. Josh was 
-            determined to spread this flavorful offering to his local community 
-            and the rest was history!</p>
+            cooked-to-order Caribbean soul food by his brother, Chef Corey Johnson. 
+            Orlando is dominated by fast food so he knew the city needed a place 
+            like Seana's. Josh was determined to spread this flavorful offering to 
+            his local community and the rest was history!</p>
         </div>
       </div>
       <div class="row d-flex justify-content-center" id="questions">
