--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
           <p class="text-left">Joshua Johnson is an Orlando native who 
             truly believes in creating opportunities for others. 
             He felt others should have an opportunity to eat the authentic, 
-            cooked-to-order Caribbean soul food by his brother, Chef Corey Johnson. 
+            cooked-to-order Caribbean, Soul Food by his brother, Chef Corey Johnson. 
             Orlando is dominated by fast food so he knew the city needed a place 
             like Seana's. Josh was determined to spread this flavorful offering to 
             his local community and the rest was history!</p>
