--- a/sandbox.html
+++ b/sandbox.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" style="overflow-x: hidden;">
   <head>
-    <title>Contact Seana's</title>
+    <title>Sandbox</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./resources/css/contact.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./resources/css/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -115,11 +115,13 @@
                   height=500'
                 )
               )
-            " class="cater-btn">
+            ">
   Catering Request
             </a>
-             </button></div>
+             </button>
+            </div>
           </div>
+
           <div class="row">
             <div class="col-12 text-left">
             <h1>Hosting</h1>
@@ -216,4 +218,4 @@
     });
     </script>
   </body>
-</html>
+</html> 
